// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probando el componente <FormCreate/> Deberia mostrar <FormCreate/> correctamente 1`] = `
<div
  className="container"
>
  <h3>
    Crear cuenta
  </h3>
  <form
    className="formFlex"
    onSubmit={[Function]}
  >
    <div
      className="fullName"
    >
      <div
        className="inputLabel null"
      >
        <label
          for="name"
        >
          Nombre
        </label>
        <input
          id="name"
          name="name"
          onChange={[Function]}
          onKeyUp={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="inputLabel apellido null"
      >
        <label
          for="surname"
        >
          Apellido
        </label>
        <input
          id="surname"
          name="surname"
          onChange={[Function]}
          onKeyUp={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="inputLabel null"
    >
      <label
        for="email"
      >
        Correo electrónico
      </label>
      <input
        id="email"
        name="email"
        onChange={[Function]}
        onKeyUp={[Function]}
        type="email"
        value=""
      />
    </div>
    <div
      className="inputLabel null"
    >
      <label
        for="password"
      >
        Contraseña
      </label>
      <input
        id="password"
        name="password"
        onChange={[Function]}
        onKeyUp={[Function]}
        type="password"
        value=""
      />
    </div>
    <div
      className="inputLabel null"
    >
      <label
        for="confirm-password"
      >
        Confirmar contraseña
      </label>
      <input
        id="confirm-password"
        name="confirm-password"
        onChange={[Function]}
        onKeyUp={[Function]}
        type="password"
        value=""
      />
    </div>
    <div
      className="errorContainer"
    >
      <p
        className="error"
      />
    </div>
    <div
      className="inputLabel boton"
    >
      <button
        type="submit"
      >
        Crear cuenta
      </button>
      <p>
        ¿Ya tienes una cuenta?
        <Link
          to="/login"
        >
           Iniciar sesión
        </Link>
      </p>
    </div>
  </form>
</div>
`;

exports[`Probando el componente <FormLogin/> Deberia mostrar <FormLogin/> correctamente 1`] = `
<div
  className="container"
>
  <h3>
    Iniciar sesión
  </h3>
  <form
    className="formFlex login"
    onSubmit={[Function]}
  >
    <div
      className="inputLabel null"
    >
      <label
        for="email"
      >
        Correo electrónico
      </label>
      <input
        id="email"
        name="email"
        onChange={[Function]}
        onKeyUp={[Function]}
        type="email"
        value=""
      />
    </div>
    <div
      className="inputLabel null"
    >
      <label
        for="password"
      >
        Contraseña
      </label>
      <input
        id="password"
        name="password"
        onChange={[Function]}
        onKeyUp={[Function]}
        type="password"
        value=""
      />
    </div>
    <div
      className="errorContainer"
    >
      <p
        className="error"
      />
    </div>
    <div
      className="inputLabel boton"
    >
      <button
        type="submit"
      >
        Ingresar
      </button>
      <p>
        ¿Aún no tenés cuenta?
        <Link
          to="/create"
        >
           Registrate
        </Link>
      </p>
    </div>
  </form>
</div>
`;
